// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderFactsIndex (2.3.0) > snapshot for the valid fixture 1`] = `
"---
title: Facts Index
tier: reference
domains:
  - knowledge-base
status: active
last_updated: '0000-00-00'
version: '1.0.0'
purpose: Auto-generated index of all facts in the knowledge base, grouped by tag then confidence.
---

# Facts Index

<!-- Auto-generated by \`hewtd maintain\`. Do not edit by hand — changes will be overwritten. -->

**Total facts:** 1

## alloy

### confidence: high

| ID                                 | Title                              | Last verified | Citers |
|------------------------------------|------------------------------------|---------------|--------|
| \`alloy-env-set-at-entrypoint-only\` | Alloy reads env only at entrypoint | 2026-05-14    | 1      |

## env-vars

### confidence: high

| ID                                 | Title                              | Last verified | Citers |
|------------------------------------|------------------------------------|---------------|--------|
| \`alloy-env-set-at-entrypoint-only\` | Alloy reads env only at entrypoint | 2026-05-14    | 1      |
"
`;

exports[`renderIncidentsIndex (2.3.0) > snapshot for the valid fixture 1`] = `
"---
title: Incidents Index
tier: reference
domains:
  - knowledge-base
  - incidents
status: active
last_updated: '0000-00-00'
version: '1.0.0'
purpose: Auto-generated chronological index of all incidents in the knowledge base.
---

# Incidents Index

<!-- Auto-generated by \`hewtd maintain\`. Do not edit by hand — changes will be overwritten. -->

**Total incidents:** 1

| Date       | ID                             | Title                      | Severity | Resolution | Components            | Facts produced |
|------------|--------------------------------|----------------------------|----------|------------|-----------------------|----------------|
| 2026-05-14 | \`2026-05-14-vault-alloy-stuck\` | Vault Down on Auth-Staging | high     | resolved   | vault, alloy, grafana | 1              |
"
`;

exports[`renderSymptomsIndex (2.3.0) > snapshot for the valid fixture 1`] = `
"---
title: Symptoms Index
tier: reference
domains:
  - knowledge-base
  - operations
status: active
last_updated: '0000-00-00'
version: '1.0.0'
purpose: Auto-generated mapping of symptom keys (alert names, user phrases, error patterns) to playbook anchors and their fact citations.
---

# Symptoms Index

<!-- Auto-generated by \`hewtd maintain\`. Do not edit by hand — changes will be overwritten. -->

## Alert names (exact match)

| Key                         | Playbook                                                                                           | Severity | Cites                              |
|-----------------------------|----------------------------------------------------------------------------------------------------|----------|------------------------------------|
| \`Vault Down — auth-staging\` | [playbooks/grafana-alerts-runbook.md](playbooks/grafana-alerts-runbook.md#vault-down-auth-staging) | critical | \`alloy-env-set-at-entrypoint-only\` |

## User phrases (fuzzy substring match)

| Key               | Playbook                                                                                           | Severity | Cites                              |
|-------------------|----------------------------------------------------------------------------------------------------|----------|------------------------------------|
| \`metrics missing\` | [playbooks/grafana-alerts-runbook.md](playbooks/grafana-alerts-runbook.md#vault-down-auth-staging) | medium   | \`alloy-env-set-at-entrypoint-only\` |
| \`scrape down\`     | [playbooks/grafana-alerts-runbook.md](playbooks/grafana-alerts-runbook.md#vault-down-auth-staging) | medium   | \`alloy-env-set-at-entrypoint-only\` |
"
`;
